[package]
name = "postgres-lo"
version = "0.1.0"
authors = ["Nicholas Sim <nsim@posteo.net>"]
edition = "2021"
description = "Async support for Postgres large objects"
readme = "README.md"
repository = "https://github.com/nw0/rust-pg-large-object"
license = "MIT"
keywords = ["async", "database", "postgres", "postgresql", "sql"]

[dependencies]
futures = "0.3"
pin-project = "1.0"
postgres-types = { version = "0.2" }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }

